Spring/src/Spring/src/Grammar/gen/HaskellParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.8
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from /Users/alexkane/study/spring-lang/Spring/src/Spring/src/Grammar/HaskellParser.g4 by ANTLR 4.8

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.8")]
[System.CLSCompliant(false)]
public partial class HaskellParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		NEWLINE=1, TAB=2, WS=3, COMMENT=4, NCOMMENT=5, OCURLY=6, CCURLY=7, VOCURLY=8, 
		VCCURLY=9, SEMI=10, CASE=11, CLASS=12, DATA=13, DEFAULT=14, DERIVING=15, 
		DO=16, ELSE=17, EXPORT=18, FOREIGN=19, IF=20, IMPORT=21, IN=22, INFIX=23, 
		INFIXL=24, INFIXR=25, INSTANCE=26, LET=27, MODULE=28, NEWTYPE=29, OF=30, 
		THEN=31, TYPE=32, WHERE=33, WILDCARD=34, QUALIFIED=35, AS=36, HIDING=37, 
		LANGUAGE=38, INLINE=39, NOINLINE=40, SPECIALIZE=41, CCALL=42, STDCALL=43, 
		CPPCALL=44, JVMCALL=45, DOTNETCALL=46, SAFE=47, UNSAFE=48, DoubleArrow=49, 
		DoubleColon=50, Arrow=51, Revarrow=52, Hash=53, Less=54, Greater=55, Ampersand=56, 
		Pipe=57, Bang=58, Caret=59, Plus=60, Minus=61, Asterisk=62, Percent=63, 
		Divide=64, Tilde=65, Atsign=66, Dollar=67, Dot=68, Semi=69, DoubleDot=70, 
		QuestionMark=71, OpenRoundBracket=72, CloseRoundBracket=73, OpenSquareBracket=74, 
		CloseSquareBracket=75, OpenCommentBracket=76, CloseCommentBracket=77, 
		Comma=78, Colon=79, Eq=80, Quote=81, DoubleQuote=82, BackQuote=83, CHAR=84, 
		STRING=85, VARID=86, CONID=87, DECIMAL=88, OCTAL=89, HEXADECIMAL=90, FLOAT=91, 
		EXPONENT=92, ASCSYMBOL=93, UNISYMBOL=94;
	public const int
		RULE_module = 0, RULE_pragmas = 1, RULE_pragma = 2, RULE_extension = 3, 
		RULE_body = 4, RULE_impdecls = 5, RULE_exports = 6, RULE_exprt = 7, RULE_impdecl = 8, 
		RULE_impspec = 9, RULE_himport = 10, RULE_cname = 11, RULE_topdecls = 12, 
		RULE_topdecl = 13, RULE_decls = 14, RULE_decl = 15, RULE_specs = 16, RULE_spec = 17, 
		RULE_cdecls = 18, RULE_cdecl = 19, RULE_idecls = 20, RULE_idecl = 21, 
		RULE_gendecl = 22, RULE_ops = 23, RULE_vars = 24, RULE_fixity = 25, RULE_type = 26, 
		RULE_btype = 27, RULE_atype = 28, RULE_gtycon = 29, RULE_typecontext = 30, 
		RULE_cls = 31, RULE_scontext = 32, RULE_simpleclass = 33, RULE_simpletype = 34, 
		RULE_constrs = 35, RULE_constr = 36, RULE_newconstr = 37, RULE_fielddecl = 38, 
		RULE_deriving = 39, RULE_dclass = 40, RULE_inst = 41, RULE_fdecl = 42, 
		RULE_callconv = 43, RULE_impent = 44, RULE_expent = 45, RULE_safety = 46, 
		RULE_funlhs = 47, RULE_rhs = 48, RULE_gdrhs = 49, RULE_gdrh = 50, RULE_guards = 51, 
		RULE_guard = 52, RULE_exp = 53, RULE_infixexp = 54, RULE_lexp = 55, RULE_fexp = 56, 
		RULE_aexp = 57, RULE_qual = 58, RULE_alts = 59, RULE_alt = 60, RULE_gdpats = 61, 
		RULE_ifgdpats = 62, RULE_gdpat = 63, RULE_stmts = 64, RULE_stmt = 65, 
		RULE_fbind = 66, RULE_pat = 67, RULE_lpat = 68, RULE_apat = 69, RULE_fpat = 70, 
		RULE_gcon = 71, RULE_var = 72, RULE_qvar = 73, RULE_con = 74, RULE_qcon = 75, 
		RULE_varop = 76, RULE_qvarop = 77, RULE_conop = 78, RULE_qconop = 79, 
		RULE_op = 80, RULE_qop = 81, RULE_gconsym = 82, RULE_open = 83, RULE_close = 84, 
		RULE_semi = 85, RULE_literal = 86, RULE_special = 87, RULE_varid = 88, 
		RULE_conid = 89, RULE_symbol = 90, RULE_ascSymbol = 91, RULE_varsym = 92, 
		RULE_consym = 93, RULE_tyvar = 94, RULE_tycon = 95, RULE_tycls = 96, RULE_modid = 97, 
		RULE_qvarid = 98, RULE_qconid = 99, RULE_qtycon = 100, RULE_qtycls = 101, 
		RULE_qvarsym = 102, RULE_qconsym = 103, RULE_integer = 104, RULE_pfloat = 105, 
		RULE_pchar = 106, RULE_pstring = 107;
	public static readonly string[] ruleNames = {
		"module", "pragmas", "pragma", "extension", "body", "impdecls", "exports", 
		"exprt", "impdecl", "impspec", "himport", "cname", "topdecls", "topdecl", 
		"decls", "decl", "specs", "spec", "cdecls", "cdecl", "idecls", "idecl", 
		"gendecl", "ops", "vars", "fixity", "type", "btype", "atype", "gtycon", 
		"typecontext", "cls", "scontext", "simpleclass", "simpletype", "constrs", 
		"constr", "newconstr", "fielddecl", "deriving", "dclass", "inst", "fdecl", 
		"callconv", "impent", "expent", "safety", "funlhs", "rhs", "gdrhs", "gdrh", 
		"guards", "guard", "exp", "infixexp", "lexp", "fexp", "aexp", "qual", 
		"alts", "alt", "gdpats", "ifgdpats", "gdpat", "stmts", "stmt", "fbind", 
		"pat", "lpat", "apat", "fpat", "gcon", "var", "qvar", "con", "qcon", "varop", 
		"qvarop", "conop", "qconop", "op", "qop", "gconsym", "open", "close", 
		"semi", "literal", "special", "varid", "conid", "symbol", "ascSymbol", 
		"varsym", "consym", "tyvar", "tycon", "tycls", "modid", "qvarid", "qconid", 
		"qtycon", "qtycls", "qvarsym", "qconsym", "integer", "pfloat", "pchar", 
		"pstring"
	};

	private static readonly string[] _LiteralNames = {
		null, null, null, null, null, null, "'{'", "'}'", "'VOCURLY'", "'VCCURLY'", 
		"'SEMI'", "'case'", "'class'", "'data'", "'default'", "'deriving'", "'do'", 
		"'else'", "'export'", "'foreign'", "'if'", "'import'", "'in'", "'infix'", 
		"'infixl'", "'infixr'", "'instance'", "'let'", "'module'", "'newtype'", 
		"'of'", "'then'", "'type'", "'where'", "'_'", "'qualified'", "'as'", "'hiding'", 
		"'LANGUAGE'", "'INLINE'", "'NOINLINE'", "'SPECIALIZE'", "'ccall'", "'stdcall'", 
		"'cplusplus'", "'jvm'", "'dotnet'", "'safe'", "'unsafe'", "'=>'", "'::'", 
		"'->'", "'<-'", "'#'", "'<'", "'>'", "'&'", "'|'", "'!'", "'^'", "'+'", 
		"'-'", "'*'", "'%'", "'/'", "'~'", "'@'", "'$'", "'.'", "';'", "'..'", 
		"'?'", "'('", "')'", "'['", "']'", "'{-#'", "'#-}'", "','", "':'", "'='", 
		"'''", "'\\'", "'`'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "NEWLINE", "TAB", "WS", "COMMENT", "NCOMMENT", "OCURLY", "CCURLY", 
		"VOCURLY", "VCCURLY", "SEMI", "CASE", "CLASS", "DATA", "DEFAULT", "DERIVING", 
		"DO", "ELSE", "EXPORT", "FOREIGN", "IF", "IMPORT", "IN", "INFIX", "INFIXL", 
		"INFIXR", "INSTANCE", "LET", "MODULE", "NEWTYPE", "OF", "THEN", "TYPE", 
		"WHERE", "WILDCARD", "QUALIFIED", "AS", "HIDING", "LANGUAGE", "INLINE", 
		"NOINLINE", "SPECIALIZE", "CCALL", "STDCALL", "CPPCALL", "JVMCALL", "DOTNETCALL", 
		"SAFE", "UNSAFE", "DoubleArrow", "DoubleColon", "Arrow", "Revarrow", "Hash", 
		"Less", "Greater", "Ampersand", "Pipe", "Bang", "Caret", "Plus", "Minus", 
		"Asterisk", "Percent", "Divide", "Tilde", "Atsign", "Dollar", "Dot", "Semi", 
		"DoubleDot", "QuestionMark", "OpenRoundBracket", "CloseRoundBracket", 
		"OpenSquareBracket", "CloseSquareBracket", "OpenCommentBracket", "CloseCommentBracket", 
		"Comma", "Colon", "Eq", "Quote", "DoubleQuote", "BackQuote", "CHAR", "STRING", 
		"VARID", "CONID", "DECIMAL", "OCTAL", "HEXADECIMAL", "FLOAT", "EXPONENT", 
		"ASCSYMBOL", "UNISYMBOL"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "HaskellParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static HaskellParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public HaskellParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public HaskellParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ModuleContext : ParserRuleContext {
		public ITerminalNode Eof() { return GetToken(HaskellParser.Eof, 0); }
		public BodyContext body() {
			return GetRuleContext<BodyContext>(0);
		}
		public SemiContext[] semi() {
			return GetRuleContexts<SemiContext>();
		}
		public SemiContext semi(int i) {
			return GetRuleContext<SemiContext>(i);
		}
		public PragmasContext pragmas() {
			return GetRuleContext<PragmasContext>(0);
		}
		public ITerminalNode MODULE() { return GetToken(HaskellParser.MODULE, 0); }
		public ModidContext modid() {
			return GetRuleContext<ModidContext>(0);
		}
		public ITerminalNode WHERE() { return GetToken(HaskellParser.WHERE, 0); }
		public OpenContext open() {
			return GetRuleContext<OpenContext>(0);
		}
		public CloseContext close() {
			return GetRuleContext<CloseContext>(0);
		}
		public ExportsContext exports() {
			return GetRuleContext<ExportsContext>(0);
		}
		public ModuleContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_module; } }
		public override void EnterRule(IParseTreeListener listener) {
			IHaskellParserListener typedListener = listener as IHaskellParserListener;
			if (typedListener != null) typedListener.EnterModule(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IHaskellParserListener typedListener = listener as IHaskellParserListener;
			if (typedListener != null) typedListener.ExitModule(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IHaskellParserVisitor<TResult> typedVisitor = visitor as IHaskellParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitModule(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ModuleContext module() {
		ModuleContext _localctx = new ModuleContext(Context, State);
		EnterRule(_localctx, 0, RULE_module);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 219;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,0,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					State = 216; semi();
					}
					} 
				}
				State = 221;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,0,Context);
			}
			State = 223;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
			case 1:
				{
				State = 222; pragmas();
				}
				break;
			}
			State = 228;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,2,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					State = 225; semi();
					}
					} 
				}
				State = 230;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,2,Context);
			}
			State = 247;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case MODULE:
				{
				{
				State = 231; Match(MODULE);
				State = 232; modid();
				State = 234;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==OpenRoundBracket) {
					{
					State = 233; exports();
					}
				}

				State = 236; Match(WHERE);
				State = 237; open();
				State = 238; body();
				State = 239; close();
				State = 243;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==SEMI || _la==Semi) {
					{
					{
					State = 240; semi();
					}
					}
					State = 245;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				}
				}
				break;
			case NEWLINE:
			case SEMI:
			case CLASS:
			case DATA:
			case DEFAULT:
			case FOREIGN:
			case IMPORT:
			case INFIX:
			case INFIXL:
			case INSTANCE:
			case NEWTYPE:
			case TYPE:
			case WILDCARD:
			case AS:
			case HIDING:
			case Minus:
			case Tilde:
			case Semi:
			case OpenRoundBracket:
			case OpenSquareBracket:
			case OpenCommentBracket:
			case CHAR:
			case STRING:
			case VARID:
			case CONID:
			case DECIMAL:
			case OCTAL:
			case HEXADECIMAL:
			case FLOAT:
				{
				State = 246; body();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			State = 249; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PragmasContext : ParserRuleContext {
		public PragmaContext[] pragma() {
			return GetRuleContexts<PragmaContext>();
		}
		public PragmaContext pragma(int i) {
			return GetRuleContext<PragmaContext>(i);
		}
		public PragmasContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_pragmas; } }
		public override void EnterRule(IParseTreeListener listener) {
			IHaskellParserListener typedListener = listener as IHaskellParserListener;
			if (typedListener != null) typedListener.EnterPragmas(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IHaskellParserListener typedListener = listener as IHaskellParserListener;
			if (typedListener != null) typedListener.ExitPragmas(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IHaskellParserVisitor<TResult> typedVisitor = visitor as IHaskellParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPragmas(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PragmasContext pragmas() {
		PragmasContext _localctx = new PragmasContext(Context, State);
		EnterRule(_localctx, 2, RULE_pragmas);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 252;
			ErrorHandler.Sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					State = 251; pragma();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				State = 254;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,6,Context);
			} while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PragmaContext : ParserRuleContext {
		public ITerminalNode OpenCommentBracket() { return GetToken(HaskellParser.OpenCommentBracket, 0); }
		public ITerminalNode LANGUAGE() { return GetToken(HaskellParser.LANGUAGE, 0); }
		public ExtensionContext[] extension() {
			return GetRuleContexts<ExtensionContext>();
		}
		public ExtensionContext extension(int i) {
			return GetRuleContext<ExtensionContext>(i);
		}
		public ITerminalNode CloseCommentBracket() { return GetToken(HaskellParser.CloseCommentBracket, 0); }
		public ITerminalNode[] Comma() { return GetTokens(HaskellParser.Comma); }
		public ITerminalNode Comma(int i) {
			return GetToken(HaskellParser.Comma, i);
		}
		public PragmaContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_pragma; } }
		public override void EnterRule(IParseTreeListener listener) {
			IHaskellParserListener typedListener = listener as IHaskellParserListener;
			if (typedListener != null) typedListener.EnterPragma(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IHaskellParserListener typedListener = listener as IHaskellParserListener;
			if (typedListener != null) typedListener.ExitPragma(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IHaskellParserVisitor<TResult> typedVisitor = visitor as IHaskellParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPragma(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PragmaContext pragma() {
		PragmaContext _localctx = new PragmaContext(Context, State);
		EnterRule(_localctx, 4, RULE_pragma);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 256; Match(OpenCommentBracket);
			State = 257; Match(LANGUAGE);
			State = 258; extension();
			State = 263;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==Comma) {
				{
				{
				State = 259; Match(Comma);
				State = 260; extension();
				}
				}
				State = 265;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 266; Match(CloseCommentBracket);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExtensionContext : ParserRuleContext {
		public ConidContext conid() {
			return GetRuleContext<ConidContext>(0);
		}
		public ExtensionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_extension; } }
		public override void EnterRule(IParseTreeListener listener) {
			IHaskellParserListener typedListener = listener as IHaskellParserListener;
			if (typedListener != null) typedListener.EnterExtension(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IHaskellParserListener typedListener = listener as IHaskellParserListener;
			if (typedListener != null) typedListener.ExitExtension(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IHaskellParserVisitor<TResult> typedVisitor = visitor as IHaskellParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExtension(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExtensionContext extension() {
		ExtensionContext _localctx = new ExtensionContext(Context, State);
		EnterRule(_localctx, 6, RULE_extension);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 268; conid();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BodyContext : ParserRuleContext {
		public ImpdeclsContext impdecls() {
			return GetRuleContext<ImpdeclsContext>(0);
		}
		public TopdeclsContext topdecls() {
			return GetRuleContext<TopdeclsContext>(0);
		}
		public BodyContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_body; } }
		public override void EnterRule(IParseTreeListener listener) {
			IHaskellParserListener typedListener = listener as IHaskellParserListener;
			if (typedListener != null) typedListener.EnterBody(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IHaskellParserListener typedListener = listener as IHaskellParserListener;
			if (typedListener != null) typedListener.ExitBody(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IHaskellParserVisitor<TResult> typedVisitor = visitor as IHaskellParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBody(this);
			else return visitor.VisitChildren(this);
		}
	}
